--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -49,6 +49,7 @@
         android:id="@+id/rcv_product"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:overScrollMode="never"
         app:layout_constraintTop_toBottomOf="@id/tab_product"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/product_item_small"/>
