--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,5 +5,13 @@
         <item name="android:fontFamily">@font/inter_regular</item>
         <item name="android:textAllCaps">true</item>
     </style>
+
+    <style name="TabLayoutTextStyle2" parent="TextAppearance.AppCompat">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:fontFamily">@font/inter_regular</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="fontFamily">@font/arialn_narrow</item>
+    </style>
 </resources>
 
