--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tabIndicatorColor="#FFFFFF"
         app:tabIndicatorFullWidth="false"
+        app:tabIndicatorHeight="10dp"
         app:tabMinWidth="0dp"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="#ffffff"
@@ -32,7 +33,7 @@
         android:id="@+id/menu_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tab_menu">
