--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".MenuActivity">
+    tools:context=".ui.menu.MenuActivity">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_menu"
