--- a/app/src/main/res/layout/product_item_small.xml
+++ b/app/src/main/res/layout/product_item_small.xml
@@ -9,10 +9,12 @@
 
     <ImageView
         android:id="@+id/img_product"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.75"
         android:src="@drawable/pro_img"
         android:adjustViewBounds="true"
+        android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -64,7 +66,7 @@
         android:fontFamily="@font/arial"
         android:visibility="invisible"
         android:layout_marginStart="3dp"
-        app:layout_constraintTop_toBottomOf="@id/txt_title"
+        app:layout_constraintTop_toTopOf="@id/txt_original_price"
         app:layout_constraintStart_toEndOf="@id/txt_original_price"/>
 
     <ImageView
